stop animation on small screens, list-items positioning, disable hover scaling…

--- a/assets/apiblueprint.styl
+++ b/assets/apiblueprint.styl
@@ -103,9 +103,20 @@ html
   font-family: 'Proxima Nova', Helvetica, Arial, sans-serif
   font-weight: 100
   color: $lightviolet
-  margin-left: $space
-  margin-right: $space
+  padding 0
+  padding-left: $space
+  padding-right: $space
+  margin-left auto
+  margin-right auto
+  max-width 70%
   margin-bottom: $horizSpace
+  text-align center
+  box-sizing border-box
+  @media screen and (max-width:660px)
+    text-align left
+    margin-left 0
+    margin-right 0
+    max-width 99%
 
 .logo__brandtext__info
   display inline-block
@@ -115,6 +126,8 @@ html
   line-height 100%
   @media screen and (max-width:660px)
     display block
+    padding-left 1em
+    text-indent -1em
 
   &:hover
     color #fff
@@ -152,8 +165,8 @@ html
 
 h1
   font-size 3.5em
-  @media screen and (max-width:480px)
-    font-size 3.5em
+  @media screen and (max-width:660px)
+    font-size 2.5em
   margin 0
   padding 0
   line-height 100%
@@ -179,7 +192,7 @@ h1
     margin-bottom $horizSpace
     font-size 1.5em
     white-space pre
-    overflow scroll
+    overflow auto
     box-shadow 2*$space 0 0 $darkerviolet, -2*$space 0 0 $darkerviolet
     @media screen and (max-width:480px)
       font-size 1.3em
@@ -247,7 +260,7 @@ h1
     position: relative
     font-size: 2em
     top: 0
-    margin-top: 0
+    margin-top: 1em
     width: 100%
 
     .link
@@ -381,7 +394,7 @@ h1
 
 @media screen and (max-width:660px)
   .page--controverse
-    margin-top $space
+    margin-top (3*$space)
 
   .versus
     .page__title
@@ -487,11 +500,6 @@ a
     transition all 0.2s linear
     transform translateZ(0px)
 
-  &:hover
-    .anim--circle
-      transform translateZ(0px) scale(1.2)
-
-
 
 .anim__dots__all
   display block
@@ -579,9 +587,9 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
   display none !important
 
 .anim--dot
-  animation-name scaler
   animation-duration 8s
   animation-iteration-count infinite
+  animation-play-state paused
 
 .anim--life
   .anim__dots__all
@@ -660,7 +668,7 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
   .anim--circle
     margin-top -40px
     margin-left -40px
-    font-size 40px
+    font-size 30px
     line-height 80px
     text-align center
     height 80px
@@ -682,6 +690,11 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
   z-index 3
   background-color $transparentC 
 
+@media only screen and (min-width:660px)
+  .logo_animation
+    .anim--dot
+      animation-play-state running
+
 @media screen and (max-width:860px)
   .logo_animation
     transform scale(0.7)
@@ -691,29 +704,33 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
       text-align center
       height 30px
       & > p
-        margin-top 14em
+        margin-top 11em
         float none
   .logo__text
     text-align center
-    margin-bottom 7em  
+    margin-bottom 9em  
 
 @media screen and (max-width:480px)
+  .fork__link
+    visibility hidden
+    display none
+
   .logo__buttons
     .logo__buttons--in
       & > p
-        top 14em
+        margin-top 11em
 
   .logo_animation
-    height 510px
+    height 360px
     margin-top 2em
-    transform scale(0.7) rotate(90deg)
+    transform scale(0.5) rotate(90deg)
 
-  .logo
+  .logo .anim__item
     .anim--circle
-      transform rotate(-90deg) scale(1.3)
+      transform rotate(-90deg) scale(1.7)
       
       &:hover
-        transform rotate(-90deg) scale(1.6)
+        transform rotate(-90deg) scale(2)
 
 .logo__buttons--in
   position relative
@@ -775,7 +792,7 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
     color $greyviolet
     padding $space
     margin 0.5em 0 1em
-    overflow scroll
+    overflow auto
 
   code
     display block
@@ -868,10 +885,17 @@ for $dur in 0.5s 1s 1.5s 2s 2.5s 3s 3.5s 4s 4.5s 5s 5.5s 6s 6.5s 7s 7.5s 8s
   width 25%
 
 @media screen and (max-width:660px)
+  .bindings .binding__list
+    margin-left -1.5em
   .bindings .binding__list .binding__item
   .bindings .binding__list .binding__item + .binding__item
-    width auto
+    width 50%
     margin-bottom 0.5em
+    border-left-width 0.5em
+    display inline-block
+
+  .bindings .binding__list .binding__item.binding__item--link
+    width auto
     display block
 
 .binding__link
